<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".login.Register">

    <include
        layout="@layout/toolbar"
        android:id="@+id/reg_toolbar"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/create_account"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_margin="10dp"
        android:gravity="center_vertical" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_name"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textColor="#000"
        android:background="#fff"/>

    <EditText
        android:id="@+id/reg_DisplayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_input_field"
        android:hint="@string/enter_full_name"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints="@string/common_google_play_services_enable_text"
        android:inputType="textAutoComplete" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_id"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textColor="#000"
        android:background="#fff"/>

    <EditText
        android:id="@+id/reg_EmailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_input_field"
        android:hint="@string/enter_email"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints="@string/common_google_play_services_enable_text"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textColor="#000"
        android:background="#fff"/>

    <EditText
        android:id="@+id/reg_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_input_field"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints="@string/common_google_play_services_enable_text"/>

    <Button
        android:id="@+id/reg_CreateAcc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="end"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_btn_primary"
        android:textColor="#fff"
        android:textSize="20sp"
        android:text="@string/create_account_btn" />

</LinearLayout>