<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.UpdateProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include
            android:id="@+id/UpdateProfileToolbar"
            layout="@layout/toolbar" />

        <ImageView
            android:id="@+id/UpdateProfileIv"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@drawable/bg_white_input"
            android:contentDescription="@string/icon_desc"
            android:padding="5dp"
            android:src="@drawable/ic_image_holder" />

        <EditText
            android:id="@+id/UpdateNameTv"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/common_google_play_services_enable_text"
            android:gravity="center"
            android:hint="@string/full_name"
            android:inputType="textFilter"
            android:maxLength="20"
            android:textAlignment="center"
            android:textColor="@color/darkText"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/UpdateMobTv"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/common_google_play_services_enable_text"
            android:gravity="center"
            android:hint="@string/mob_number"
            android:inputType="textFilter"
            android:maxLength="20"
            android:textAlignment="center"
            android:textColor="@color/darkText"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/UpdateStatusTv"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/common_google_play_services_enable_text"
            android:gravity="center"
            android:hint="@string/new_status"
            android:inputType="textMultiLine"
            android:maxLength="150"
            android:maxLines="5"
            android:textAlignment="center"
            android:textColor="@color/darkText"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/TeacherCb"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/teacher_account"
            android:visibility="gone" />

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adViewUpdateProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="MEDIUM_RECTANGLE"
            ads:adUnitId="@string/ad_unit_id_banner" />

        <Button
            android:id="@+id/UpdateDetailsBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/update" />

    </LinearLayout>

</ScrollView>