<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.ContactUs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/ContactUsToolbar"
            layout="@layout/toolbar" />

        <EditText
            android:id="@+id/ContactUsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:autofillHints="@string/common_google_play_services_enable_text"
            android:gravity="center_horizontal"
            android:hint="@string/title"
            android:inputType="text"
            android:maxLength="60"
            android:minHeight="50dp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/darkText"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ContactUsQuery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="5dp"
            android:autofillHints="@string/common_google_play_services_install_text"
            android:gravity="start"
            android:hint="@string/write_your_query"
            android:inputType="textMultiLine"
            android:maxLength="1000"
            android:padding="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/darkText"
            android:textStyle="italic" />


        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adViewContactUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ads:adSize="MEDIUM_RECTANGLE"
            ads:adUnitId="@string/ad_unit_id_banner" />

        <Button
            android:id="@+id/ContactUsBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:background="@drawable/btn_next"
            android:text="@string/upload" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/our_e_mail_id"
                android:textColor="@color/lightText"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="10dp"
                android:text="@string/himanshumauri_hotmail_com"
                android:textColor="@color/darkText"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>