<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".show.ShowNotes">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/NotesUploaderContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uploaded_by"
                android:textColor="@color/lightText" />

            <TextView
                android:id="@+id/NotesUploaderName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/darkText" />
        </LinearLayout>

        <TextView
            android:id="@+id/showNotesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/NotesUploaderContainer"
            android:layout_marginVertical="15dp"
            android:background="@drawable/bg_white_input"
            android:gravity="center_horizontal"
            android:hint="@string/title"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/darkText"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/VideoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/showNotesTitle"
            android:orientation="vertical"
            android:layout_marginVertical="5dp"
            android:visibility="invisible">

            <com.google.android.youtube.player.YouTubePlayerView
                android:id="@+id/YoutubeNotesVideoPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/VideoIntentBtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="5dp"
                android:background="@drawable/btn_submit"
                android:text="@string/play_video"/>
        </LinearLayout>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adViewNotesShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/VideoContainer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            ads:adSize="MEDIUM_RECTANGLE"
            ads:adUnitId="@string/ad_unit_id_banner" />

        <TextView
            android:id="@+id/ShowNotesBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/adViewNotesShow"
            android:layout_marginVertical="10dp"
            android:gravity="start"
            android:hint="@string/body"
            android:padding="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/darkText"
            android:textStyle="italic" />

    </RelativeLayout>

</ScrollView>