<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".show.MCQResult">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ScoreBoard"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:gravity="center"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textAllCaps="true"
                android:textColor="@color/bgWhite"
                android:textStyle="bold"
                android:textSize="50sp"/>
            <TextView
                android:id="@+id/Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="@color/bgWhite"
                android:textStyle="bold"
                android:textSize="50sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/out_of"
                    android:textAllCaps="true"
                    android:textColor="@color/bgWhite"
                    android:textStyle="bold"
                    android:textSize="50sp"
                    android:layout_marginHorizontal="10dp"/>
                <TextView
                    android:id="@+id/TotalNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textColor="@color/bgWhite"
                    android:textStyle="bold"
                    android:textSize="50sp"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/DoneBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ScoreBoard"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="30dp"
            android:text="@string/done"
            android:background="@drawable/btn_submit"/>

        <!-- AdMob -->

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adViewMCQResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/DoneBtn"
            ads:adSize="MEDIUM_RECTANGLE"
            ads:adUnitId="@string/ad_unit_id_banner"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/adViewMCQResult"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginVertical="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uploaded_by"
                android:textColor="@color/lightText"
                android:layout_marginHorizontal="10dp"/>
            <TextView
                android:id="@+id/ResultUploaderName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkText"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>
    </RelativeLayout>



</ScrollView>